# mcp-postgres

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: audit.py  config.py  server.py  sql_validation.py
src/mcp_postgres/: config.py  server.py
src/mcp_postgres/tools/: __init__.py  postgres.py
src/tests/: test_sql_validation.py  test_tools.py
src/tools/: __init__.py  postgres.py
